# aim-trainer

./: .gitignore  CMakeLists.txt  main.cpp
Engine/: Collider.h  System.h  aicomponent.cpp  aicomponent.h  aisystem.cpp  aisystem.h  application.h  behaviortree.h  cameracomponent.cpp  cameracomponent.h  camerasystem.h  charactercontrollercomponent.cpp  charactercontrollercomponent.h  charactercontrollersystem.cpp  charactercontrollersystem.h  collision.h  collisioncomponent.cpp  collisioncomponent.h  collisionresult.h  collisionsystem.cpp  collisionsystem.h  component.h  core.cpp  core.h  cylindercollider.cpp  cylindercollider.h  drawcomponent.cpp  drawcomponent.h  drawsystem.cpp  drawsystem.h  dummycomponent.cpp  dummycomponent.h  ellipsecollider.cpp  ellipsecollider.h  gameobject.h  gameworld.cpp  gameworld.h  healthcomponent.cpp  healthcomponent.h  input.cpp  (+21 more)
Engine/glu/: gl2d.cpp  gl2d.h  glui.cpp  glui.h
Engine/glu/include/gameLayer/: gameLayer.h
Engine/glu/include/platform/: platformInput.h  platformTools.h
Engine/glu/src/gameLayer/: gameLayer.cpp
Engine/glu/src/platform/: glfwMain.cpp  headerOnly.cpp  otherPlatformFunctions.cpp  platformInput.cpp
Graphics/: camera.cpp  camera.h  global.h  graphics.cpp  graphics.h  modeltransform.cpp  modeltransform.h  shape.cpp  shape.h
Graphics/GLWrappers/: shader.cpp  shader.h  texture.cpp  texture.h
Resources/Shaders/: phong.vert
Warmup/: App.h  app.cpp  gamescreen.cpp  gamescreen.h  menuscreen.cpp  menuscreen.h
